--- a/src/main/java/pl/edu/agh/arbeit/gui/view/Standard.css
+++ b/src/main/java/pl/edu/agh/arbeit/gui/view/Standard.css
@@ -1,6 +1,6 @@
 .root {
-    -fx-base: #f2f2f2;
-    -fx-background-color: #07263b;
+    -fx-base: #f8f8f8;
+    -fx-background-color: #bfbfbf;
     -fx-text-fill: #f2f2f2;
 }
 
